# nakode

./: .gitignore  AGENTS.md  Cargo.toml  README.md  dev.sh  install.sh
config/: default-agents.toml  providers.toml
src/: agent.rs  app.rs  backend.rs  clipboard.rs  commands.rs  config.rs  control.rs  controls.rs  credential.rs  diagnostics.rs  editor.rs  handoff.rs  herdr.rs  lib.rs  main.rs  markdown.rs  pty.rs  render.rs  runtime.rs  selection.rs  session.rs  skill.rs  state.rs  terminal.rs  terminal_image.rs  transcript.rs  update.rs  vision.rs  web.rs
src/codex/: client.rs  mod.rs  native.rs  protocol.rs
src/cursor/: bridge.mjs  mod.rs
src/devin/: client.rs  mod.rs  native.rs  protocol.rs
src/tools/: ask.rs  bash.rs  browser.rs  edit.rs  eval.rs  glob.rs  grep.rs  hypa.rs  mod.rs  process.rs  read.rs  todo.rs  vision.rs  write.rs
tests/: backend_fixture.rs  devin_backend_fixture.rs  tui_terminal.rs
tests/fixtures/: fake_codex.py  fake_devin.py
