[package]
name = "nakode"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
description = "A provider-neutral terminal layer for agent sessions and orchestration"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Keep development builds quick without removing useful line information from
# backtraces. Release builds are unaffected.
[profile.dev]
debug = 1
incremental = true

[profile.test]
debug = 1
incremental = true

[features]
default = []
codex-process-adapter = []

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
clipboard-rs = "0.3.5"
crossterm = { version = "0.29", features = ["event-stream"] }
directories = "6"
futures-util = "0.3"
flate2 = "1"
globset = "0.4"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
open = "5"
portable-pty = "0.9"
prost = "0.14"
pulldown-cmark = "0.13"
ratatui = "0.30"
ratatui-image = { version = "11.0.6", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
regex = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shell-words = "1"
syntect = { version = "5", default-features = false, features = [
    "default-syntaxes",
    "default-themes",
    "regex-fancy",
] }
thiserror = "2"
tokio = { version = "1.52", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-util = "0.7"
toml = "0.9"
unicode-width = "0.2"
uuid = { version = "1", features = ["v5", "v7"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal"] }

[dev-dependencies]
tempfile = "3"
